[package]
name = "hydro"
version = "0.1.0"
authors = ["Chung Wong <wch705@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
anyhow = "1.0.62"
embedded-hal = "1.0.0-alpha.8"
embedded-svc = "0.22.1"
esp-idf-svc = { version = "0.42.5", features = ["experimental", "alloc"] }
esp-idf-sys = { version = "0.31.6", features = ["binstart"] }
esp-idf-hal = "0.38.0"
log = "0.4.17"
time = { version = "0.3.13", features = ["formatting"] }
url = "2.2.2"

[build-dependencies]
anyhow = "1.0.62"
embuild = "0.29"
